--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@
                     <span>照顧服務整合平台</span>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="carer.html">照顧者需求</a></li>
-                    <li><a href="cared.html">被照顧者需求</a></li>
-                    <li><a href="athome.html">居家環境需求</a></li>
-                    <li><a href="medic.html">醫療可近性</a></li>
+                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="carer.html">照顧者之家</a></li>
+                    <li><a href="cared.html">被照顧者之家</a></li>
+                    <li><a href="athome.html">居家環境</a></li>
+                    <li><a href="medic.html">醫療在那兒</a></li>
                 </ul>
             </nav>
         </div>
@@ -328,7 +329,7 @@
                     <div class="service-icon carer-icon">
                         <i class="fas fa-user-md"></i>
                     </div>
-                    <h3>照顧者需求</h3>
+                    <h3>照顧者之家</h3>
                     <p>提供照顧者培訓、心理支持、休息服務和資源連結，減輕照顧負擔。</p>
                     <a href="carer.html" class="btn">了解更多</a>
                 </div>
@@ -337,7 +338,7 @@
                     <div class="service-icon cared-icon">
                         <i class="fas fa-wheelchair"></i>
                     </div>
-                    <h3>被照顧者需求</h3>
+                    <h3>被照顧者之家</h3>
                     <p>評估並滿足被照顧者的生理、心理和社交需求，提供個人化照顧計劃。</p>
                     <a href="cared.html" class="btn">了解更多</a>
                 </div>
@@ -346,7 +347,7 @@
                     <div class="service-icon home-icon">
                         <i class="fas fa-home"></i>
                     </div>
-                    <h3>居家環境需求</h3>
+                    <h3>居家環境</h3>
                     <p>居家安全評估、無障礙空間規劃和輔具建議，打造安全舒適的生活環境。</p>
                     <a href="athome.html" class="btn">了解更多</a>
                 </div>
@@ -355,7 +356,7 @@
                     <div class="service-icon medic-icon">
                         <i class="fas fa-hospital"></i>
                     </div>
-                    <h3>醫療可近性</h3>
+                    <h3>醫療在那兒</h3>
                     <p>醫療資源整合、就醫交通協助和遠距醫療服務，提升醫療資源可近性。</p>
                     <a href="medic.html" class="btn">了解更多</a>
                 </div>
@@ -404,13 +405,13 @@
                 </div>
                 <div class="footer-section">
                     <h3>聯絡我們</h3>
-                    <p><i class="fas fa-phone"></i> 電話: (02) 1234-5678</p>
-                    <p><i class="fas fa-envelope"></i> 郵箱: service@careplatform.org</p>
-                    <p><i class="fas fa-map-marker-alt"></i> 地址: 台北市信義區市府路1號</p>
+                    <p><i class="fas fa-phone"></i> 電話: (02) 2312-3456</p>
+                    <p><i class="fas fa-envelope"></i> 郵箱: maxteng@ntuh.gov.tw</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 地址: 窩沒有</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 照顧服務整合平台 版權所有</p>
+                <p>&copy; 2025 照顧服務整合平台 版權所有</p>
             </div>
         </div>
     </footer>
