--- a/five-rules.html
+++ b/five-rules.html
@@ -343,10 +343,10 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html">首頁</a></li>
-                    <li><a href="carer.html">照顧者需求</a></li>
-                    <li><a href="cared.html">被照顧者需求</a></li>
-                    <li><a href="athome.html">居家環境需求</a></li>
-                    <li><a href="medic.html">醫療可近性</a></li>
+                    <li><a href="carer.html">照顧者之家</a></li>
+                    <li><a href="cared.html">被照顧者之家</a></li>
+                    <li><a href="athome.html">居家環境</a></li>
+                    <li><a href="medic.html">醫療在那兒</a></li>
                 </ul>
             </nav>
         </div>
